'修改兼容性'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,maximun-scale=1.0,minimum-scale=1.0,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>全国天气查询小应用</title>
     <link rel="icon" href="favicon.ico">
@@ -84,13 +84,13 @@
                 <div class="future-info">--</div>
                 <div class="future-info">12-16℃</div>
             </div>
-            <div class="future-box">
+            <!--<div class="future-box">
                 <img class="future-img" src="./images/weather_icon/4.png" alt="天气" />
                 <div class="future-info">201X-XX-XX</div>
                 <div class="future-info">星期X</div>
                 <div class="future-info">--</div>
                 <div class="future-info">12-16℃</div>
-            </div>
+            </div>-->
         </div>
     </section>
     <script src="./js/index.js"></script>
